--- a/HomeWork/Template/index.html
+++ b/HomeWork/Template/index.html
@@ -15,15 +15,15 @@
     <div class="container">
         <!-- start container -->
         <!-- start hero-block -->
-        <div class="hero-block hero-block-mb">
+        <div class="hero-block">
             <!-- start header -->
-            <div class="header header-mb">
-                <div class="header__navigation header__navigation-mb">
-                    <div class="header__navigation-title header__navigation-title-mb">
-                        <span class="header__navigation-images header__navigation-images-mb"><img class="" src="./img/navigation.svg" alt=""></span>
-                        <span class="header__navigation-titles header__navigation-titles-mb"><a href="#">Portofolio</a></span>
+            <div class="header">
+                <div class="header__navigation">
+                    <div class="header__navigation-title">
+                        <span class="header__navigation-images"><img  src="./img/navigation.svg" alt="navigation"></span>
+                        <span class="header__navigation-titles"><a href="#">Portofolio</a></span>
                     </div>
-                    <ul class="menu menu-mb">
+                    <ul class="menu">
                         <li>
                             <a href="#">Home</a>
                         </li>
@@ -48,21 +48,21 @@
             </div>
             <!-- end header -->
             <!-- start Hero-block__information -->
-            <div class="hero-block__information hero-block__information-mb">
-                <div class="hero-block__information__main-title hero-block__information__main-title-mb">
+            <div class="hero-block__information">
+                <div class="hero-block__information__main-title">
                     Hi, It’s Théophile Seyrig
                 </div>
-                <div class="hero-block__information__second-title hero-block__information__second-title-mb">
+                <div class="hero-block__information__second-title">
                     Designer from Porto, Portugal
                 </div>
-                <div class="hero-block__information__latest-works hero-block__information__latest-works-mb">
+                <div class="hero-block__information__latest-works">
                     <a href="#"> Latest works</a></div>
             </div>
             <!-- end Hero-block__information -->
         </div>
         <!-- close hero-block -->
         <!-- start about -->
-        <div class="about about-mobile">
+        <div class="about">
             <div class="about__title">
                 <span>About</span>
             </div>
@@ -74,14 +74,14 @@
         </div>
         <!-- close about -->
         <!-- start skills -->
-        <div class="skills skills-mobile">
+        <div class="skills">
             <div class="profile_title">
                 <span>
                     Skills
                 </span>
             </div>
             <div class="profile-details">
-                <div class="profile-images"><img src="./img/profile-picture.svg" alt="">
+                <div class="profile-images"><img src="./img/profile-picture.svg" alt="Profile image">
                 </div>
                 <div class="profile-details-block-left-side">
                     <span class="col-1">Profile</span>
@@ -106,32 +106,34 @@
         </div>
         <!-- close skills -->
         <!-- start portfolio -->
-        <div class="portfolio portfolio-mobile">
+        <div class="portfolio">
             <div class="portfolio__title ">
                 <span class="portfolio__title-main">Portfolio</span>
                 <span class="portfolio__title-second">UX Research</span>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ac dictum nibh nam odio cursus id. Diam massa semper a tincidunt cursus ultricies lectus eget urna.</p>
                 <div class="portfolio__arrows">
                     <span>
-                        <a href="#"><img class="arrow"src="./img/arrow-left.svg" alt=""></a>
-                        <a href="#"><img src="./img/arrow-right.svg" alt=""></a>
+                        <a href="#"><img class="arrow"src="./img/arrow-left.svg" alt="arrow"></a>
+                        <a href="#"><img src="./img/arrow-right.svg" alt="arrow"></a>
                     </span>
                 </div>
             </div>
             <div class="portfolio__images">
                 <div class="side-left">
-                    <span class="img-1"><img src="./img/portfolio_img-1.svg" alt=""></span>
-                    <span><img src="./img/portfolio_img-2.svg" alt=""></span>
+                    <span class="portfolio__images-1"><img src="./img/portfolio_img-1.svg" alt="first image"></span>
+                    <span><img src="./img/portfolio_img-2.svg" alt="second image"></span>
                 </div>
                 <div class="side-right">
-                    <span class="img-1"><img src="./img/portfolio_img-3.svg" alt=""></span>
-                    <span><img src="./img/portfolio_img-4.svg" alt=""></span>
+                    <span class="portfolio__image-3"><img src="./img/portfolio_img-3.svg" alt="
+                        third image"></span>
+                    <span><img src="./img/portfolio_img-4.svg" alt="
+                        fourth image"></span>
                 </div>
             </div>
         </div>
         <!-- close portfolio -->
         <!-- start Get_in_touch -->
-        <div class="Get__in__touch Get__in__touch-mobile">
+        <div class="Get__in__touch">
             <div class="Get__in__touch-title"><span>Get in Touch</span></div>
             <div class="Get__in__touch-details">
                 <div class="side left">
