--- a/HomeWork/Template/css/mixin.scss
+++ b/HomeWork/Template/css/mixin.scss
@@ -1,25 +1,23 @@
-@mixin font_style_align_weight_size_line($font-size, $line_height) {
-    font-style: normal;
-    font-weight: normal;
-    text-align: center;
-    font-size: $font-size;
-    line-height: $line_height;
-}
-
-@mixin font_style_weight_size_height_align( $font-weight, $font-size, $line_height, $text-align) {
-    font-style: normal;
+@mixin font_style_weight_size_height_align($font-style, $font-weight, $font-size, $line_height, $text-align) {
+    font-style: $font-style;
     font-weight: $font-weight;
     font-size: $font-size;
     line-height: $line_height;
     text-align: $text-align;
 }
 
-@mixin font_style_weight_size_height( $font-weight, $font-size, $line_height) {
+@mixin font_style_align_weight_size_line($font-size, $line-height) {
     font-style: normal;
+    font-weight: normal;
+    font-size: $font-size;
+    line-height: $line-height;
+}
+
+@mixin font_style_weight_size_height( $font-style, $font-weight, $font-size, $line_height) {
+    font-style: $font-style;
     font-weight: $font-weight;
     font-size: $font-size;
     line-height: $line_height;
-    text-align: center;
 }
 
 @mixin fonts_display_direction_font-weight( $font-weight) {
@@ -30,4 +28,29 @@
     flex-direction: column;
     font-size: 12px;
     font-weight: $font-weight;
+}
+
+@mixin margin_top_and_left {
+    margin-top: 93px;
+    margin-left: 165px;
+}
+
+@mixin a {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+@mixin a_black {
+    text-decoration: none;
+    color: #333333
+}
+
+@mixin a_hover( $color) {
+    text-decoration: none;
+    color: $color;
+}
+
+@mixin font_family_and_bg {
+    font-family: $font_family;
+    background: #FFFAF2;
 }
