--- a/HomeWork/Template/index.html
+++ b/HomeWork/Template/index.html
@@ -158,7 +158,7 @@
                 </a>
             </div>
         </div>
-        <!-- end Get_in_touch -->
+        <!-- end get-in-touch -->
     </div>
     <!-- close container -->
 </body>
