--- a/HomeWork/(29.09.2019)Ifandswitch/css/style.scss
+++ b/HomeWork/(29.09.2019)Ifandswitch/css/style.scss
@@ -29,6 +29,9 @@
         color: rgb(241, 201, 144);
       }
     }
+    button:nth-last-of-type(2) {
+      margin-left: 20px;
+    }
     button:last-child {
       margin-left: 20px;
     }
